// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxInput Simple Tests should handle auto-focus 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  auto-focus={true}
  autoFocus={true}
  blurOnSubmit={true}
  defaultValue="auto focus"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="auto focus"
/>
`;

exports[`MpxInput Simple Tests should handle custom styles 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="styled"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "color": "#333",
      "fontSize": 16,
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="styled"
/>
`;

exports[`MpxInput Simple Tests should handle disabled state 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="disabled"
  disabled={true}
  editable={false}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="disabled"
/>
`;

exports[`MpxInput Simple Tests should handle empty value 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue=""
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value=""
/>
`;

exports[`MpxInput Simple Tests should handle focus events 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  bindfocus={[MockFunction]}
  blurOnSubmit={true}
  defaultValue="test"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test"
/>
`;

exports[`MpxInput Simple Tests should handle input events 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  bindinput={[MockFunction]}
  blurOnSubmit={true}
  defaultValue="test"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test"
/>
`;

exports[`MpxInput Simple Tests should handle maxlength 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="short"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={10}
  maxlength={10}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="short"
/>
`;

exports[`MpxInput Simple Tests should handle number type 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="123"
  editable={true}
  enterKeyHint="done"
  keyboardType="numeric"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  type="number"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="123"
/>
`;

exports[`MpxInput Simple Tests should handle numeric value 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="123"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="123"
/>
`;

exports[`MpxInput Simple Tests should handle password input 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="secret"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  password={true}
  secureTextEntry={true}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="secret"
/>
`;

exports[`MpxInput Simple Tests should handle text type 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="text input"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  type="text"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="text input"
/>
`;

exports[`MpxInput Simple Tests should render with default props 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue=""
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value=""
/>
`;

exports[`MpxInput Simple Tests should render with placeholder 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue=""
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  placeholder="Enter text here"
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value=""
/>
`;

exports[`MpxInput Simple Tests should render with value prop 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="test value"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test value"
/>
`;

exports[`MpxInput Simple Tests should update disabled state: disabled state 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="test"
  disabled={true}
  editable={false}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test"
/>
`;

exports[`MpxInput Simple Tests should update disabled state: enabled state 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="test"
  disabled={false}
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test"
/>
`;

exports[`MpxInput Simple Tests should update value correctly: initial value 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="initial"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="initial"
/>
`;

exports[`MpxInput Simple Tests should update value correctly: updated value 1`] = `
<TextInput
  adjust-position={true}
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="updated"
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="initial"
/>
`;
